# SoccerLegacy

./: SoccerLegacy.csproj  Splash.tscn  SplashManager.cs  debug.keystore  export_presets.cfg  gradlew  project.godot  settings.gradle
.github/workflows/: build.yml  keystore.yml  main.yml
Assets/: Readme.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/soccerlegacy/: MainActivity.java
